<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/chasgrey2"
    android:alpha="0.85">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mondayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tues"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tuesdayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weds"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wednesdayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/thurs"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thursdayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fri"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fridayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sat"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saturdayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sun"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sundayTimingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolderTiming"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />
    </LinearLayout>


</RelativeLayout>